Settings file completed

--- a/Application/config.ini
+++ b/Application/config.ini
@@ -1,7 +1,14 @@
 [Document Formatting]
 IconSize = 75
 
+mainTableColWidth1 = 3.44
+mainTableColWidth2 = 4.75
+mainTableColWidth3 = 2.49
+mainTableColWidth4 = 4.56
 
+discTableColWidth1 = 3.44
+discTableColWidth2 = 11.8
 
 [Output Settings]
-path = '..\\GHS.docx'
+path = ..\GHS
+open = Yes
