Changed save location Added comments

--- a/Application/config.ini
+++ b/Application/config.ini
@@ -1,14 +1,20 @@
 [Document Formatting]
 IconSize = 75
+;Size of Danger Symbols
 
 mainTableColWidth1 = 3.44
 mainTableColWidth2 = 4.75
 mainTableColWidth3 = 2.49
 mainTableColWidth4 = 4.56
+;Dimensions of table
 
 discTableColWidth1 = 3.44
 discTableColWidth2 = 11.8
+;Dimensions of table containing H/P-Statements
 
 [Output Settings]
-path = ..\GHS
+path = GHS
+;Path where file will be saved. Can be relative, like .\..\test
+; .docx will be added automatically
 open = Yes
+;Open file automatically
